--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,3 +54,15 @@ p {
     padding-top: 1rem;
   }
 }
+.media-source-name a {
+  color: #2E2F30;
+}
+.media-content h2 {
+  font-size: 130%;
+  text-decoration: underline;
+  color: #2E2F30;
+}
+.media-content .tags span {
+  letter-spacing: 3px;
+  font-weight:bold;
+}
