Fix to view image

--- a/app/views/fronts/index.html.erb
+++ b/app/views/fronts/index.html.erb
@@ -9,8 +9,8 @@
               <%= link_to content.expanded_url, {target: '_blank'}  do %>
                 <article class="media">
                   <div class="media-left">
-                    <figure class="image is-64x64">
-                      <img src="http://placehold.it/128x128" alt="Image">
+                    <figure class="image is-128x128">
+                      <img src="https://dev.newsdict.jp/img/<%= content.id %>" alt="Image">
                     </figure>
                   </div>
                   <div class="media-content">
