--- a/app/views/fronts/_nav.html.erb
+++ b/app/views/fronts/_nav.html.erb
@@ -15,6 +15,7 @@
     <div id="navbar" class="navbar-menu" v-bind:class="{'is-active': isOpen}">
       <div class="navbar-end">
         <div class="navbar-item">
+          <% if count_user < ENV['MAX_MEMBER_COUNT'].to_i %>
           <div class="buttons">
             <%= link_to rails_admin_path, class: 'button' do %>
               <span class="icon">
@@ -23,6 +24,7 @@
               <span><%= t('Dashboard') %></span>
             <% end %>
           </div>
+          <% end %>
         </div>
       </div>
     </div>
