Upgrade npm module / Prepare the action by the environment

--- a/app/views/fronts/index.html.erb
+++ b/app/views/fronts/index.html.erb
@@ -10,7 +10,7 @@
                 <article class="media">
                   <div class="media-left">
                     <figure class="image is-128x128">
-                      <img src="https://dev.newsdict.jp/img/<%= content.id %>" alt="Image">
+                      <img src="/img/<%= content.id %>" alt="Image">
                     </figure>
                   </div>
                   <div class="media-content">
