--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= Config[:head] %>
+    <%= Config[:head].html_safe %>
     <title>Newsdict</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
@@ -9,10 +9,9 @@
     <%= stylesheet_link_tag  'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <%= Config[:after_body] %>
+    <%= Config[:after_body].html_safe %>
     <%= yield %>
-
     <%= javascript_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
-    <%= Config[:end_body] %>
+    <%= Config[:end_body].html_safe %>
   </body>
 </html>
