Replace image tag

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -55,3 +55,10 @@ p {
   letter-spacing: 3px;
   font-weight:bold;
 }
+
+.content-image {
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  border: 1px solid #333;
+}
