--- a/app/views/fronts/index.html.erb
+++ b/app/views/fronts/index.html.erb
@@ -9,7 +9,7 @@
               <article class="media">
                 <div class="media-left">
                   <figure class="image is-128x128">
-                    <img src="/img/<%= content.id %>" alt="Image">
+                    <div class="content-image" style="background-image: url('/img/<%= content.id %>');" alt="Image">
                   </figure>
                 </div>
                 <div class="media-content">
