Fixes #17 / Separate instance and class methods.

--- a/app/views/fronts/_nav.html.erb
+++ b/app/views/fronts/_nav.html.erb
@@ -8,7 +8,7 @@
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar" @click="isOpen = !isOpen" v-bind:class="{'is-active': isOpen}">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
+        <span aria-hidden="true">aaaa</span>
       </a>
     </div>
 
