Added to sort the contents function.

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -1,9 +1,8 @@
 /*
  * css for webpacker
  */
-@import '~bulma';
+@import '~bulma/bulma';
 $fa-font-path: "~font-awesome/fonts";
-@import '~font-awesome/scss/font-awesome';
 
 html, body {
   font-family: 'Open Sans', serif;
@@ -64,4 +63,8 @@ p {
 
 a:hover {
   color: rgb(63, 0, 255);
+}
+
+#order-desktop {
+  padding: 0.5rem 1.5rem;
 }
