--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
   <body>
     <%= Config[:after_body].html_safe %>
+    <%= render partial: "layouts/header/navi" %>
     <%= yield %>
     <%= Config[:end_body].html_safe %>
     <%= javascript_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
