--- a/app/views/layouts/header/_navi.html.erb
+++ b/app/views/layouts/header/_navi.html.erb
@@ -8,11 +8,11 @@
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar" @click="isOpen = !isOpen" v-bind:class="{'is-active': isOpen}">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
-        <span aria-hidden="true">aaaa</span>
+        <span aria-hidden="true"></span>
       </a>
     </div>
 
-    <div id="navbar" class="navbar-menu" v-bind:class="{'is-active': isOpen}">
+    <div id="navbar" class="navbar-menu is-desktop" v-bind:class="{'is-active': isOpen}">
       <div class="navbar-end">
         <div class="navbar-item">
           <% if count_user < ENV['MAX_MEMBER_COUNT'].to_i %>
@@ -30,3 +30,6 @@
     </div>
   </div>
 </nav>
+<section id="order-desktop" class="is-hidden-touch">
+  <%= render partial: "layouts/header/order" %>
+</section>
