--- a/app/views/fronts/index.html.erb
+++ b/app/views/fronts/index.html.erb
@@ -23,7 +23,8 @@
                   </div>
                   <p class="is-pulled-right media-source-name">
                     <%= link_to get_source_url(content.source_id), {target: '_blank'} do %>
-                     <%= t('shared by') %> <strong><%= get_name_by_source(content.source_id) %></strong> / <small><%= Time.at(content.created_at).in_time_zone %></small>
+                     <%= t('Shared By') %> <strong><%= get_name_by_source(content.source_id) %> (<%= content.count_of_shared %>)</strong> /
+                     <small><%= Time.at(content.created_at).in_time_zone %></small>
                     <% end %>
                   </p>
                 </div>
