--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -3,14 +3,28 @@
     <div class="column is-full">
       <div class="box">
         <% @contents.each do |content| %>
-          <% logger.info(content) %>
           <% unless content["expanded_url"].match(/^https:\/\/twitter.com/) %>
-            <%= link_to content["expanded_url"], {target: '_blank'}  do %>
-              <%= render partial: 'article', locals: {content: content} %>
-            <% end %>
-           <hr>
+            <%= render partial: 'article', locals: {content: content} %>
           <% end %>
         <% end %>
+        <div id="more-contents">
+          <div v-for="(content,index) in contents" v-if="content">
+            <%= render partial: 'article', locals: {content: {
+              "is_vue" => true,
+              "id" => "content.id",
+              "title" => "{{content.title}}",
+              "content" => "{{content.content}}",
+              "longer_tags" => "content.longer_tags",
+              "expanded_url" => "content.expanded_url",
+              "count_of_shared" => "{{content.count_of_shared}}",
+              "created_at" => "{{content.created_at}}",
+              "source" => {
+                "source_url" => "content.source.source_url",
+                "name" => "content.source.name"
+              }
+            }} %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
