--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -3,7 +3,7 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <div class="column is-4 is-offset-4">
-          <h3 class="title has-text-grey"><%= t('Resend confirmation instructions') %></h3>
+          <h3 class="title has-text-grey"><%= t('.resend_confirmation_instructions') %></h3>
           <%= render "devise/shared/error_messages", resource: resource %>
           <div class="box">
             <div class="field">
@@ -12,7 +12,7 @@
                 <%= f.email_field :email, autofocus: false, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "input is-large" %>
               </div>
             </div>
-            <%= f.submit "Resend confirmation instructions" %>
+            <%= f.submit t('.resend_confirmation_instructions') %>
             <hr/>
             <%= render "devise/shared/links" %>
           </div>
