--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <%= Config[:after_body].html_safe if Configs::View[:after_body]..is_a?(String) %>
+    <%= Config[:after_body].html_safe if Configs::View[:after_body].is_a?(String) %>
     <%= yield %>
     <%= Config[:end_body].html_safe if Configs::View[:end_body].is_a?(String) %>
     <%= javascript_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
