Added the category.

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -69,3 +69,10 @@ a:hover {
 #order-desktop {
   padding: 0.5rem 1.5rem;
 }
+
+div.tabs > ul > li#logo {
+  font-size: 140%;
+  font-weight: bold;
+  text-align: center;
+  letter-spacing: 2px;
+}
