--- a/app/views/layouts/header/_navi.html.erb
+++ b/app/views/layouts/header/_navi.html.erb
@@ -1,35 +1,25 @@
-<nav id="mobile-menu" class="navbar" role="navigation" aria-label="main navigation">
-  <div class="container">
-    <div class="navbar-brand">
-      <a class="navbar-item">
-        <%= t('sitename') %>
+<div class="tabs is-toggle is-fullwidth">
+  <ul>
+    <li id="logo" class="is-family-sans-serif">
+      <span><%= t('sitename') %></span>
+    </li>
+    <% Configs::Category.all.map {|category| category.key }.each do |key| %> 
+    <li class="<%= current_page?("/category/#{CGI::escape(key)}/") ? "is-active": "" %>">
+      <a href="/category/<%= CGI::escape(key) %>/">
+        <span><%= key %></span>
       </a>
-
-      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar" @click="isOpen = !isOpen" v-bind:class="{'is-active': isOpen}">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-
-    <div id="navbar" class="navbar-menu is-desktop" v-bind:class="{'is-active': isOpen}">
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <% if count_user < ENV['MAX_MEMBER_COUNT'].to_i %>
-          <div class="buttons">
-            <%= link_to rails_admin_path, class: 'button' do %>
-              <span class="icon">
-                <i class="fa fa-cogs"></i>
-              </span>
-              <span><%= t('Dashboard') %></span>
-            <% end %>
-          </div>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-</nav>
+    </li>
+    <% end %>
+    <% if count_user < ENV['MAX_MEMBER_COUNT'].to_i %>
+    <li>
+      <%= link_to rails_admin_path, class: 'button' do %>
+        <span class="icon is-small"><i class="fa fa-cogs" aria-hidden="true"></i></span>
+        <span><%= t('Setting') %></span>
+      <% end %>
+    </li>
+    <% end %>
+  </ul>
+</div>
 <section id="order-desktop" class="is-hidden-touch">
   <%= render partial: "layouts/header/order" %>
 </section>
