--- a/app/views/layouts/header/_navi.html.erb
+++ b/app/views/layouts/header/_navi.html.erb
@@ -1,7 +1,9 @@
 <div class="tabs is-toggle is-fullwidth">
   <ul>
     <li id="logo" class="is-family-sans-serif">
-      <span><%= t('sitename') %></span>
+      <a href="/">
+        <span><%= t('sitename') %></span>
+      </a>
     </li>
     <% Configs::Category.all.map {|category| category.key }.each do |key| %> 
     <li class="<%= current_page?("/category/#{CGI::escape(key)}/") ? "is-active": "" %>">
