Added a detail page.

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -81,3 +81,9 @@ div.tabs > ul > li#logo > a {
   padding: 2px 0 3px;
   border: 0;
 }
+h2.menu-label {
+  font-size: 1.25em;
+}
+.media-content > a > button {
+  margin: 20px 0;
+}
