--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,3 +1,6 @@
+<section id="order-desktop" class="is-hidden-touch">
+  <%= render partial: "order" %>
+</section>
 <section class="section main">
   <div class="columns">
     <div class="column is-full">
