--- a/app/views/pages/content.html.erb
+++ b/app/views/pages/content.html.erb
@@ -3,7 +3,7 @@
         <div class="column is-3 ">
             <aside class="menu is-hidden-mobile">
                 <h2 class="menu-label">
-                    <%= t(:be_shared_content_list, name: "ほりえもん") %>
+                    <%= t(:be_shared_content_list, name: @content.source.view_name) %>
                 </h2>
                 <ul class="menu-list">
                     <% index = 50 %>
