--- a/app/views/pages/content.html.erb
+++ b/app/views/pages/content.html.erb
@@ -93,7 +93,7 @@
                                         <tr>
                                             <td width="5%"><i class="fa fa-bell-o"></i></td>
                                             <td width="20%">URL</td>
-                                            <td><a href="<%= @content.expanded_url %>"><%= @content.expanded_url.truncate(40) %></a></td>
+                                            <td><a rel="nofollow" href="<%= @content.expanded_url %>"><%= @content.expanded_url.truncate(40) %></a></td>
                                         </tr>
                                         <tr>
                                             <td width="5%"><i class="fa fa-bell-o"></i></td>
