--- a/app/views/pages/_article.html.erb
+++ b/app/views/pages/_article.html.erb
@@ -5,7 +5,7 @@ else
   key = "href"
   value = content["expanded_url"]
 end %>
-<%= vue_content_tag :a, key => value, :target => :_blank do %>
+<%= vue_content_tag :a, key => value, rel: :nofollow, target: :_blank do %>
   <article class="media" v-bind:index="index">
     <div class="media-left">
       <figure class="image is-128x128">
@@ -33,7 +33,7 @@ end %>
           key = "href"
           value = "#{content["source"]["source_url"]}/#{content["source"]["name"]}"
         end %>
-        <%= vue_content_tag :a, key => value, :target => :_blank do %>
+        <%= vue_content_tag :a, key => value, rel: :nofollow, target: :_blank do %>
           <%= t('Shared By') %>&nbsp;
           <% if content["is_vue"] %>
           <strong>{{<%= content["source"]["view_name"] %>}} (<%= content["count_of_shared"] %>)</strong>
