--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -21,7 +21,8 @@
               "created_at" => "{{content.created_at}}",
               "source" => {
                 "source_url" => "content.source.source_url",
-                "name" => "content.source.name"
+                "name" => "content.source.name",
+                "Vinew_name" => "{{content.source.view_name}}"
               }
             }} %>
           </div>
