--- a/app/views/pages/_article.html.erb
+++ b/app/views/pages/_article.html.erb
@@ -36,7 +36,7 @@ end %>
         <%= vue_content_tag :a, key => value, rel: :nofollow, target: :_blank do %>
           <%= t('Shared By') %>&nbsp;
           <% if content["is_vue"] %>
-          <strong>{{<%= content["source"]["view_name"] %>}} (<%= content["count_of_shared"] %>)</strong>
+          <strong><%= content["source"]["view_name"] %>(<%= content["count_of_shared"] %>)</strong>
           <% else %>
           <strong><%= content["source"]["view_name"] %> (<%= content["count_of_shared"] %>)</strong>
           <% end %>
