--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -22,7 +22,7 @@
               "source" => {
                 "source_url" => "content.source.source_url",
                 "name" => "content.source.name",
-                "Vinew_name" => "{{content.source.view_name}}"
+                "view_name" => "{{content.source.view_name}}"
               }
             }} %>
           </div>
