--- a/app/views/pages/_article.html.erb
+++ b/app/views/pages/_article.html.erb
@@ -1,47 +1,26 @@
-<% if content["is_vue"]
-  key = "v-bind:href"
-  value = content["expanded_url"]
-else
-  key = "href"
-  value = content["expanded_url"]
-end %>
-<%= vue_content_tag :a, key => value, rel: :nofollow, target: :_blank do %>
+<% vuejs_suffix = defined?(vuejs_suffix) ? vuejs_suffix : "" %>
+<%= vue_content_tag :a, "#{vuejs_suffix}href" => content.expanded_url, rel: :nofollow, target: :_blank do %>
   <article class="media" v-bind:index="index">
     <div class="media-left">
       <figure class="image is-128x128">
-        <% if content["is_vue"] %>
-        <%= vue_content_tag :div, "", class: "content-image", alt: "Image", bind: {style: "{ 'background-image': 'url(/img/' + #{content["id"]} + ')' }"} %>
-        <% else %>
-        <%= vue_content_tag :div, "", class: "content-image", alt: "Image", style: "background-image: url(/img/#{content["id"]});" %>
-        <% end %>
+        <%= vue_content_tag :div, "", class: "content-image", alt: "Image", **image %>
       </figure>
     </div>
     <div class="media-content">
-      <%= vue_content_tag :h2, content["title"] %>
-      <%= vue_content_tag :div, content["content"], class: "content" %>
-      <%= vue_content_tag :div, content["longer_tags"].html_safe, "v-html" => content["longer_tags"], class: "tags" %>
-      <a href="/content/<%= content["id"] %>/">
+      <%= vue_content_tag :h2, content.title %>
+      <%= vue_content_tag :div, content.content, class: "content" %>
+      <%= vue_content_tag :div, content.longer_tags.html_safe, "v-html" => content.longer_tags, class: "tags" %>
+      <%= vue_content_tag :a, "#{vuejs_suffix}href" => content_url, target: :_blank do %>
         <button class="button is-primary is-rounded is-small">
           <%= t(:more_information) %>
         </button>
-      </a>
+      <% end %>
       <p class="is-pulled-right media-source-name">
-        <% if content["is_vue"]
-          key = "v-bind:href"
-          value = "#{content["source"]["source_url"]} + '/' + #{content["source"]["name"]}"
-        else
-          key = "href"
-          value = "#{content["source"]["source_url"]}/#{content["source"]["name"]}"
-        end %>
-        <%= vue_content_tag :a, key => value, rel: :nofollow, target: :_blank do %>
+        <%= vue_content_tag :a, "#{vuejs_suffix}href" => source_url, rel: :nofollow, target: :_blank do %>
           <%= t('Shared By') %>&nbsp;
-          <% if content["is_vue"] %>
-          <strong><%= content["source"]["view_name"] %>(<%= content["count_of_shared"] %>)</strong>
-          <% else %>
-          <strong><%= content["source"]["view_name"] %> (<%= content["count_of_shared"] %>)</strong>
-          <% end %>
+          <strong><%= content.source.view_name %>(<%= content.count_of_shared %>)</strong>
           &nbsp;/&nbsp;
-          <%= vue_content_tag :small, content["created_at"] %>
+          <%= vue_content_tag :small, content.created_at %>
         <% end %>
       </p>
     </div>
