--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -6,12 +6,20 @@
     <div class="column is-full">
       <div class="box">
         <% @contents.each do |content| %>
-          <%= render partial: 'article', locals: {content: content} %>
+          <% content = JSON.parse(content.to_json, object_class: OpenStruct) %>
+          <%= render partial: 'article', locals: {
+            image: {
+              style: "background-image: url(/img/#{content.id});"
+            },
+            content_url: "/content/#{content.id}",
+            source_url: "#{content.source.source_url}/#{content.source.name}",
+            content: content
+          } %>
         <% end %>
         <div id="more-contents">
           <div v-for="(content,index) in contents" v-if="content">
-            <%= render partial: 'article', locals: {content: {
-              "is_vue" => true,
+            <%
+            vue_for_content = {
               "id" => "content.id",
               "title" => "{{content.title}}",
               "content" => "{{content.content}}",
@@ -23,8 +31,19 @@
                 "source_url" => "content.source.source_url",
                 "name" => "content.source.name",
                 "view_name" => "{{content.source.view_name}}"
-              }
-            }} %>
+              }}
+            %>
+            <%= render partial: 'article', locals: {
+              vuejs_suffix: Newsdict::Application.config.vuejs_suffix,
+              image: {
+                bind: {
+                  style: "{ 'background-image': 'url(/img/' + content.id + ')' }"
+                }
+              },
+              content_url: "'/content/' + content.id + '/'",
+              source_url: "content.source.source_url + '/' + content.source.name",
+              content: JSON.parse(vue_for_content.to_json, object_class: OpenStruct)
+              } %>
           </div>
         </div>
       </div>
