--- a/app/views/errors/exceptions_app.html.erb
+++ b/app/views/errors/exceptions_app.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <%= Configs::View[:head].html_safe if Configs::View[:head].is_a?(String) %>
-    <title>Newsdict</title>
+    <title>Not Found Page | <%= t('sitename') %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
