Added inquiry form

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -87,3 +87,17 @@ h2.menu-label {
 .media-content > a > button {
   margin: 20px 0;
 }
+div.header {
+  display:flex;
+  justify-content: flex-start;
+}
+div.header > div.order {
+  margin: 0 auto 10px 10px;
+}
+div.header > dl.information {
+  display: flex;
+  margin:0 10px;
+}
+div.header > dl.information > dd {
+  margin:0 5px;
+}
