--- a/app/views/errors/exceptions_app.html.erb
+++ b/app/views/errors/exceptions_app.html.erb
@@ -11,7 +11,7 @@
   <body>
     <%= Configs::View[:after_body].html_safe if Configs::View[:after_body].is_a?(String) %>
     <%= render partial: "layouts/header/navi" %>
-     <section class="hero is-success is-fullheight">
+     <section class="hero is-fullheight">
         <div class="hero-body">
             <div class="container has-text-centered">
                 <div class="column is-4 is-offset-4">
