--- a/app/views/pages/_order.html.erb
+++ b/app/views/pages/_order.html.erb
@@ -1,20 +1,28 @@
-<div class="dropdown">
-  <div class="dropdown-trigger">
-    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-      <span>Sort the contents</span>
-      <span class="icon is-small">
-        <i class="fas fa-angle-down" aria-hidden="true"></i>
-      </span>
-    </button>
-  </div>
-  <div class="dropdown-menu" id="dropdown-menu" role="menu">
-    <div class="dropdown-content">
-      <a href="?sort=newest" class="dropdown-item <% if params["sort"] == "newest" %>is-active<% end %>">
-        Sort by newest
-      </a>
-      <a href="?sort=count" class="dropdown-item <% if params["sort"] == "count" %>is-active<% end %>">
-        Sort by share count
-      </a>
+<div class="order">
+  <div class="dropdown">
+    <div class="dropdown-trigger">
+      <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+        <span>
+          <% if params[:sort] == 'count' %>
+            <%= t('sort_by_shared_count') %>
+          <% else %>
+            <%= t('sort_by_newest') %>
+          <% end %>
+        </span>
+        <span class="icon is-small">
+          <i class="fas fa-angle-down" aria-hidden="true"></i>
+        </span>
+      </button>
+    </div>
+    <div class="dropdown-menu" id="dropdown-menu" role="menu">
+      <div class="dropdown-content">
+        <a href="?sort=newest" class="dropdown-item <% if params["sort"] == "newest" %>is-active<% end %>">
+          <%= t('sort_by_newest') %>
+        </a>
+        <a href="?sort=count" class="dropdown-item <% if params["sort"] == "count" %>is-active<% end %>">
+          <%= t('sort_by_shared_count') %>
+        </a>
+      </div>
     </div>
   </div>
 </div>
