--- a/app/views/pages/paper.html.erb
+++ b/app/views/pages/paper.html.erb
@@ -1,43 +1,59 @@
-<section class="container">
+<div class="paper container">
     <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    Hello, Admin.
+                    <%= @paper.title %>
                 </h1>
                 <h2 class="subtitle">
-                    I hope you are having a great day!
+                    <%= @paper.description %>
                 </h2>
             </div>
         </div>
     <nav class="breadcrumb" aria-label="breadcrumbs">
         <ul>
-            <li><a href="../">Bulma</a></li>
-            <li><a href="../">Templates</a></li>
-            <li><a href="../">Examples</a></li>
-            <li class="is-active"><a href="#" aria-current="page">Admin</a></li>
+            <li><a href="/">Top</a></li>
+            <li><a><%= @paper.user.username %></a></li>
+            <li class="is-active"><a href="#" aria-current="page"><%= @paper.title.truncate(20) %></a></li>
         </ul>
-    </nav>
-    <div class="columns features">
+            </nav>
+    <div class="paper columns features">
         <% @max_column.times.each do |index| %>
-        <div class="is-3">
+        <div class="row is-3">
         <% @paper.contents.each_slice(@max_column) do |content| %>
             <div class="column paper card is-shady">
                 <div class="card-head"  style="background-image: url(/img/<%= content[index].id %>)">
                     <div class="card-title">
+                        <%= link_to content[index].expanded_url ,target: :_blank, ref: :nofollow do %>
                         <h4><%= content[index].title %></h4>
+                        <% end %>
                     </div>
                 </div>
                 <div class="card-content">
                     <p><%= content[index].content.truncate(100) %></p>
                 </div>
                 <footer>
-                    <span class="button">
-                        <%= link_to t(:read_more), content[index].expanded_url ,target: :_blank %>
-                    </span>
+                    <%= link_to "/content/#{content[index].id}" do %>
+                        <span class="button is-link">
+                            <%= t(:more_information) %>
+                        </span>
+                    <% end %>
                 </footer>
             </div>
         <% end %>
         </div>
         <% end %>
     </div>
-</section>
+    <nav class="pagination is-centered" role="navigation" aria-label="pagination">
+        <a class="pagination-previous">Previous</a>
+        <a class="pagination-next">Next page</a>
+        <ul class="pagination-list">
+            <li><a class="pagination-link" aria-label="Goto page 1">1</a></li>
+            <li><span class="pagination-ellipsis">&hellip;</span></li>
+            <li><a class="pagination-link" aria-label="Goto page 45">45</a></li>
+            <li><a class="pagination-link is-current" aria-label="Page 46" aria-current="page">46</a></li>
+            <li><a class="pagination-link" aria-label="Goto page 47">47</a></li>
+            <li><span class="pagination-ellipsis">&hellip;</span></li>
+            <li><a class="pagination-link" aria-label="Goto page 86">86</a></li>
+        </ul>
+    </nav>
+</div>
