--- a/app/views/layouts/header/_navi.html.erb
+++ b/app/views/layouts/header/_navi.html.erb
@@ -1,4 +1,4 @@
-<div class="tabs is-toggle is-fullwidth">
+<div class="tabs is-fullwidth">
   <ul>
     <li id="logo" class="is-family-sans-serif">
       <a href="/">
