--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,11 +1,4 @@
-<div class="container">
-  <div class="header">
-    <%= render partial: "order" %>
-    <dl class="information">
-      <dd><%= link_to t('official_site'), 'https://newsdict.io/', target: :_blank %></dd>
-      <dd><%= link_to t('inquiry'), inquiries_path %></dd>
-    </dl>
-  </div>
+<section class="container">
   <div class="columns">
     <div class="column is-full">
       <div class="box">
