Move the tabs by swipe

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container swipeContainer">
   <div class="columns">
     <div class="column is-full">
       <div class="box">
