--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -115,7 +115,8 @@ div.header > dl.links > dd {
 }
 @media only screen and (max-width: 768px) {
   .columns {
-      margin-left: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 .paper.card > .card-head {
