--- a/app/views/layouts/header/_navi.html.erb
+++ b/app/views/layouts/header/_navi.html.erb
@@ -1,12 +1,12 @@
 <div class="tabs is-fullwidth">
   <ul>
-    <li id="logo" class="is-family-sans-serif">
+    <li id="logo" class="is-family-sans-serif swipeTab <%= current_page?("/") ? "is-active": "" %>">
       <a href="/">
         <span><%= t('sitename') %></span>
       </a>
     </li>
     <% Configs::Category.all.map {|category| category.key }.each do |key| %> 
-    <li class="<%= current_page?("/category/#{CGI::escape(key)}/") ? "is-active": "" %>">
+    <li class="swipeTab <%= current_page?("/category/#{CGI::escape(key)}/") ? "is-active": "" %>">
       <a href="/category/<%= CGI::escape(key) %>/">
         <span><%= key %></span>
       </a>
