--- a/app/views/layouts/header/_navi.html.erb
+++ b/app/views/layouts/header/_navi.html.erb
@@ -1,4 +1,4 @@
-<div class="tabs is-fullwidth">
+<div class="tabs is-fullwidth fixed-header">
   <ul>
     <li id="logo" class="is-family-sans-serif swipeTab <%= current_page?("/") ? "is-active": "" %>">
       <a href="/">
