--- a/app/views/layouts/header/_information.html.erb
+++ b/app/views/layouts/header/_information.html.erb
@@ -1,6 +1,10 @@
 <div id="information">
   <div class="header">
-    <%= render partial: "layouts/header/order" %>
+    <div class="order">
+      <% if params[:controller] == "pages" %>
+      <%= render partial: "layouts/header/order" %>
+      <% end %>
+    </div>
     <dl class="links">
       <dd><%= link_to t('official_site'), 'https://newsdict.io/', target: :_blank %></dd>
       <dd><%= link_to t('inquiry'), inquiries_path %></dd>
