--- a/app/themes/default/contents/show.html.erb
+++ b/app/themes/default/contents/show.html.erb
@@ -6,8 +6,10 @@
                     <%= t(:be_shared_content_list, name: @content.source.view_name) %>
                 </h2>
                 <ul class="menu-list">
-                    <% Contents::Web.contents(name: @content.source.name).order_by(created_at: :desc).each_with_index do |content, index| %>
-                    <li><a href="/content/<%= content.id %>/" class="<%= current_page?("/content/#{content.id}/") ? "is-active": "" %>"><%= index %> <%= content.title.truncate(20) %></a></li>
+                    <% @contents.each_with_index do |content, index| %>
+                    <li>
+                        <%= link_to content.title.truncate(20), content_path(content.id), { class: (current_page?(content_path(content.id)) ? "is-active": "") }%>
+                    </li>
                     <% end %>
                 </ul>
             </aside>
